--- a/sqlite-android/build.gradle
+++ b/sqlite-android/build.gradle
@@ -1,16 +1,16 @@
-import com.vanniktech.maven.publish.SonatypeHost
-
 plugins {
     id "de.undercouch.download"
     id "com.android.library"
-    id "com.vanniktech.maven.publish" version "0.30.0"
+    id "com.vanniktech.maven.publish" version "0.34.0"
 }
 
 android {
-    buildToolsVersion = "35.0.1"
-    ndkVersion "28.0.13004108"
+    buildToolsVersion = "36.1.0"
+    ndkVersion "28.2.13676358"
 
-    compileSdk 35
+    compileSdk {
+        version = release(36)
+    }
 
     namespace "io.requery.android.sqlite"
 
@@ -48,17 +48,17 @@ android {
 }
 
 dependencies {
-    api("androidx.core:core:1.15.0")
+    api("androidx.core:core:1.17.0")
     api("androidx.sqlite:sqlite:2.4.0")
     testImplementation("junit:junit:4.13.2")
-    androidTestImplementation("androidx.test:core:1.6.1")
-    androidTestImplementation("androidx.test:runner:1.6.2")
-    androidTestImplementation("androidx.test:rules:1.6.1")
-    androidTestImplementation("androidx.test.ext:junit:1.2.1")
+    androidTestImplementation("androidx.test:core:1.7.0")
+    androidTestImplementation("androidx.test:runner:1.7.0")
+    androidTestImplementation("androidx.test:rules:1.7.0")
+    androidTestImplementation("androidx.test.ext:junit:1.3.0")
 }
 
 ext {
-    sqliteDistributionUrl = "https://www.sqlite.org/2025/sqlite-amalgamation-3490000.zip"
+    sqliteDistributionUrl = "https://www.sqlite.org/2025/sqlite-amalgamation-3500400.zip"
 }
 
 tasks.register("downloadSqlite", Download) {
@@ -94,6 +94,6 @@ tasks.register("javadoc", Javadoc) {
 }
 
 mavenPublishing {
-    publishToMavenCentral(SonatypeHost.DEFAULT, /* automaticRelease */ true)
+    publishToMavenCentral(/* automaticRelease */ true)
     signAllPublications()
 }
